--- a/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
@@ -3,47 +3,40 @@
         <app-breadcrumb *ngIf="breadcrumbLinks.length>0" [breadcrumbLinks]="breadcrumbLinks"
             [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
     </div>
-    <div class="header">
+    <!-- <div class="header">
         <div class="header-text">
             {{policyDisplayName}}
         </div>
-          <!-- <div class="status-wrapper">
+          <div class="status-wrapper">
             <mat-slide-toggle [checked]="status" (change)="toggleStatus($event)"></mat-slide-toggle>
             <span class="subtitle-2">Status</span>
-          </div> -->
-    </div>
+          </div>
+    </div> -->
         <div class="stepper">
                     <div class="right-wrapper">
                         <form class="form-wrapper" (ngSubmit)="onSubmit(policyForm)" #policyForm="ngForm">
                             <div class="details-wrapper">
                                 <div class="details-header">
                                     <div class="details-header-text">
-                                        Policy Details and Parameters
+                                        Policy Details & Parameters -
+                                        <span class="header-subtext">{{policyDisplayName}}</span>
                                     </div>
                                 </div>
                                 <div class="details-content-wrapper">
+                                    <div class="description-wrapper">
+                                        <span class="desc-header">Description</span>
+                                        <span class="desc">{{description}}</span>
+                                    </div>
                                     <div class="attributes-wrapper">
                                         <div class="row">
-                                            <div class="attribute-wrapper">
-                                                <span class="attribute-header">Policy Id</span>
-                                                <span class="attribute-value">{{policyId}}</span>
-                                            </div>
                                             <div class="attribute-wrapper">
                                                 <span class="attribute-header">Type</span>
                                                 <span class="attribute-value">{{selectedPolicyType}}</span>
                                             </div>
-                                        </div>
-                                        <div class="row">
                                             <div class="attribute-wrapper">
                                                 <span class="attribute-header">Asset Type</span>
                                                 <span class="attribute-value">{{selectedAssetType}}</span>
                                             </div>
-                                            <div class="attribute-wrapper">
-                                                <span class="attribute-header">Description</span>
-                                                <span  class="attribute-value">{{description}}</span>
-                                            </div>
-                                        </div>
-                                        <div class="row">
                                             <div class="attribute-wrapper">
                                                 <span class="attribute-header">Resolution Link</span>
                                                 <a target="_blank" href="{{resolutionUrl}}">
@@ -51,9 +44,9 @@
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="row">
+                                        <div class="row dropdown-wrapper">
                                             <div class="attribute-wrapper">
-                                                <div class="dropdown" [class.isEnabled]="selectedPolicyType=='ManagePolicy'">
+                                                <div class="dropdown">
                                                     <app-dropdown [required]="isRequired" [optionImage]="true"
                                                         [items]="policySeverities" placeholder="Severity"
                                                         [selectedItem]="selectedSeverity" name="severity"
@@ -62,7 +55,7 @@
                                                     </div>
                                                 </div>
                                                  <div class="attribute-wrapper">
-                                                    <div class="dropdown" [class.isEnabled]="selectedPolicyType=='ManagePolicy'">
+                                                    <div class="dropdown">
                                                         <app-dropdown [required]="isRequired" [optionImage]="true"
                                                             [items]="policyCategories" placeholder="Category"
                                                             [selectedItem]="selectedCategory" name="category"
@@ -72,21 +65,19 @@
                                                 </div>
                                         </div>
                                     </div>
-                                    <div class="attributes-wrapper" *ngIf="paramsList.length>0">
+                                    <div class="attributes-wrapper" *ngIf="hasEditableParams>0">
                                         <div class="parameters-wrapper">
-                                            <div *ngFor="let param of paramsList;let i=index">
-                                                <div class="parameter-wrapper" *ngIf="param.isEdit" >
+                                            <div class="parameter-wrapper" *ngFor="let param of paramsList;let i=index" [class.hide]="!param.isEdit">
                                                     <div class="input-wrapper">
                                                         <mat-form-field appearance="outline">
                                                             <mat-label>{{param.displayName}}</mat-label>
-                                                            <input autocomplete="off" matInput name="resolutionUrl"
+                                                            <input autocomplete="off" matInput [name]="param.key"
                                                                 [(ngModel)]="param.value">
                                                         </mat-form-field>
                                                         <div class="info-img">
                                                             <img src="../../../assets/icons/info-circle.svg" [matTooltip]="param.description" matTooltipPosition="right">
                                                         </div>
                                                     </div>
-                                            </div>
                                             </div>
                                         </div>
                                     </div>
