--- a/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.css
@@ -15,11 +15,11 @@
  .page-layout{
   padding: 28px;
   height: 100%;
-}
+} 
 
 .form-wrapper{
    overflow: auto;
-   padding: 0px 24px 0px 0px;
+   padding: 0 24px 24px 0;
    display: flex;
    flex-direction: column;
    gap: 40px;
@@ -151,7 +151,7 @@ gap: 16px;
 
 .parameters-wrapper{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   width: 100%;
   padding-top: 24px;
   border-top: 1px solid var(--border-200);
@@ -162,7 +162,7 @@ gap: 16px;
   display: flex;
   flex-direction: row;
   gap: 12px;
-  width: 52%;
+  width: 40%;
 }
 
 
@@ -188,7 +188,7 @@ border: 1px solid var(--border-200);
 }
 
 .stepper{
-   height: calc(100% - 120px);
+   height: calc(100% - 20px);
    display: flex;
 }
 
@@ -491,8 +491,6 @@ img{
 padding: 24px;
 display: flex;
 flex-direction: column;
-height: 400px;
-overflow: auto;
 border-bottom: 2px solid var(--border-100);
 border-top: 2px solid var(--border-100);
 gap: 32px;
@@ -507,7 +505,6 @@ gap: 32px;
 .description-wrapper{
   display: flex;
   flex-direction: column;
-  gap: 12px;
 }
 
 .attributes-wrapper{
@@ -544,10 +541,16 @@ gap: 20px;
   width: 100%;
 }
 
+.dropdown-wrapper .attribute-wrapper{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
 .attribute-wrapper{
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 33%;
 }
 
 .table-wrapper{
@@ -556,4 +559,8 @@ gap: 20px;
 
 .policy-knowledgebase-wrapper ::ng-deep .mat-form-field-label-wrapper{
   top: -13px !important;
+}
+
+.header-subtext{
+  color: var(--text-low-emphasis)
 }
